[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-image-api"
version = "0.1.0"
description = "Authenticated public job API backed by a Google Flow Windows worker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
flow-image-worker = "flow_image_api.worker:main"

[tool.setuptools.packages.find]
include = ["flow_image_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
